done modif profile

--- a/profile.html
+++ b/profile.html
@@ -1,20 +1,142 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="indry.css">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  
+  <title>Project Team 2</title>
+</head>
+<body>
+  <!-- header -->
+  <nav class="navbar navbar-light" style="background-color: #556B2F;">
+    <a class="navbar-brand" href="profile.html">
+      <img src="gambar1.jpg" alt="gambar" class="rounded-circle">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="profile.html">Profile</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+  <!-- content -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-9">
+        <!-- sejarah perusahaan -->
+        <div class="media">
+          <img class="align-self-center mr-3" src="gambar2.jpg" alt="Generic placeholder image">
+          <div class="media-body">
+            <h5 class="mt-0">PT. Asdfghjkl Zxcvbnm</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor corrupti, assumenda optio, soluta quam sed dicta eos dignissimos dolorum ex quo eligendi impedit doloribus perferendis. Officia fugit amet ad commodi?</p>
+            <p class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo incidunt accusamus, expedita odio nam quam officiis esse vel sed eius dolorem in repellendus, placeat a animi! Tempore voluptatibus nulla vero.</p>
+            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores nisi vel, accusamus itaque ducimus rerum quasi voluptate totam aliquid cupiditate ipsam at voluptatibus? Consequatur, quod! Quisquam aut earum iusto in?</p>
+          </div>
+        </div>
+        <!-- visi misi -->
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card border-success mb-3" style="max-width: 30rem;">
+              <div class="card-header bg-transparent border-success">Visi Perusahaan</div>
+              <div class="card-body text-success">
+                <h5 class="card-title">Success</h5>
+                <p class="card-text">Conan Edogawa adalah alter ego Shinichi Kudo. Dia tidak ada sebelum rantai peristiwa, melibatkan anggota Organisasi Hitam, yang menyebabkan Shinichi untuk mengubah kembali ke anak.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card border-success mb-3" style="max-width: 30rem;">
+              <div class="card-header bg-transparent border-success">Misi Perusahaan</div>
+              <div class="card-body text-success">
+                <h5 class="card-title">Integrity</h5>
+                <p class="card-text">Shinichi muncul dengan alias Conan Edogawa menggunakan nama penulis misteri Arthur Conan Doyle dan Edogawa Rampo dan berpura-pura menjadi relatif jauh dari Agasa yang kemudian menempatkan Conan dalam perawatan Ran.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- header struktur perusahaan -->
+        <div class="alert alert-success" role="alert">
+          <h1>STRUKTUR PERUSAHAAN</h1>
+        </div>
+        <!-- struktur perusahaan -->
+        <div class="card-deck">
+          <div class="card">
+            <img class="card-img-top" src="gambar3.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Direksi</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="gambar3.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Manager</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="gambar3.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Supervisior</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- kontak perusahaan -->
+      <div class="col-md-3">
+        <form>
+          <h3>Contact Us</h3>
+          
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">As</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+              <option>Member</option>
+              <option>Non Member</option>
+              <option>Vendor</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Message</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary mb-2">Sent Message</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <!-- footer -->
+  <div class="footer">
+    <footer>Copyright &copy indrysfa</footer>
+  </div>
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
